@@ -110,6 +110,7 @@ public class TestMysqlEventListener
             125L,
             126L,
             127L,
+            1271L,
             128.0,
             129.0,
             // not stored
@@ -121,7 +122,7 @@ public class TestMysqlEventListener
             // not stored
             Collections.emptyList(),
             // not stored
-            Collections.emptyList(),
+            List.of("{operator: \"operator1\"}", "{operator: \"operator2\"}"),
             // not stored
             Optional.empty());
 
@@ -257,6 +258,7 @@ public class TestMysqlEventListener
             125L,
             126L,
             127L,
+            1271L,
             128.0,
             129.0,
             // not stored
@@ -267,7 +269,6 @@ public class TestMysqlEventListener
             Collections.emptyList(),
             // not stored
             Collections.emptyList(),
-            // not stored
             Collections.emptyList(),
             // not stored
             Optional.empty());
@@ -421,6 +422,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getDouble("failed_cumulative_memory"), 129.0);
                     assertEquals(resultSet.getLong("completed_splits"), 130);
                     assertEquals(resultSet.getString("retry_policy"), "TASK");
+                    assertEquals(resultSet.getString("operator_summaries_json"), "[{operator: \"operator1\"},{operator: \"operator2\"}]");
                     assertFalse(resultSet.next());
                 }
             }
@@ -503,6 +505,7 @@ public class TestMysqlEventListener
                     assertEquals(resultSet.getDouble("failed_cumulative_memory"), 129.0);
                     assertEquals(resultSet.getLong("completed_splits"), 130);
                     assertEquals(resultSet.getString("retry_policy"), "NONE");
+                    assertEquals(resultSet.getString("operator_summaries_json"), "[]");
                     assertFalse(resultSet.next());
                 }
             }
